[workspace]
members = [
    "tree_rs",
    "tree_py",
    "treemap_rs"
]

resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
homepage = ""
repository = ""
keywords = []
categories = []
authors = ["macdonald.glen.a@gmail.com"]
description = "tree module package"
readme = "README.md"
license="Apache-2.0"
rust-version = "1.70"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

