[build-system]
requires = ["maturin>=1.3.0,<=1.4.0"]
build-backend = "maturin"

[project]
name = "tree"
version = "0.0.1"
authors = [ { name="GlenAMacdonald" } ]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
project_urls={
    "Source": "https://github.com/GlenAMacdonald/pyo3Tree",
    "Tracker": "https://github.com/GlenAMacdonald/pyo3Tree/issues",
}
url="https://github.com/GlenAMacdonald/pyo3Tree",

[tool.black]
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 88

[tool.maturin]
python-source = "python"
include = ["*"]

Homepage = "https://github.com/GlenAMacdonald/pyo3Tree"
Issues = "https://github.com/GlenAMacdonald/pyo3Tree/issues"