[build-system]
requires = ["maturin>=1.3.0,<=1.4.0"]
build-backend = "maturin"

[project]
name = "pyo3Tree"
version = "0.1.0"
authors = [ { name="GlenAMacdonald" } ]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/GlenAMacdonald/pyo3Tree"
issues = "https://github.com/GlenAMacdonald/pyo3Tree/issues"

[project.urls]
URL = "https://github.com/GlenAMacdonald/pyo3Tree"

[tool.black]
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 88

[tool.maturin]
python-source = "python"
include = ["*"]

