[package]
name = "tree_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5" }
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }

[dependencies]
rand = "0.8.5"
lazy_static = "1.4"
dashmap = "4.0"
anyhow = "1.0.82"
pyo3 = { version = "0.21.1", features = ["abi3-py38","extension-module", "auto-initialize"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bench]]
name = "tree_benchmark"
harness = false